--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smebig-system",
+  "name": "smebig-6palse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
